checking overflow fix on prod

--- a/app/index.css
+++ b/app/index.css
@@ -12,6 +12,7 @@ html {
   color: #111;
   font-family: "Rubik", sans-serif;
   width: 100vw;
+  overflow-x: hidden;
 }
 
 body {
