--- a/app/stylesheets/base.scss
+++ b/app/stylesheets/base.scss
@@ -11,6 +11,7 @@ html {
     color: #111;
     font-family: 'Rubik', sans-serif;
     width: 100vw;
+    overflow-x: hidden;
 }
 
 body {
